--- a/Lesson1_5/fun/form.html
+++ b/Lesson1_5/fun/form.html
@@ -8,11 +8,39 @@
 		<h1>Let's play with forms!</h1>
 	</header>
 	<nav>
-		<a href="index.html">Homepage</a>
-		<a href="horses.html">Horses</a>
-	</nav>
-	<footer><h3></h3>Contact me via Discord :)</footer>
+    <a href="index.html">Homepage</a> <br>
+    <a href="horses.html">Horses</a> <br> <br>
+  </nav>
+  <form name="horses" method="GET">
+    First name: <input type="text" name="firstname"><br> <br>
+    Age: <input type="number" name="age"><br> <br>
+    Gender:<br> <br>
+      <input type="radio" name="gender" value="male">Male <br> <br>
+      <input type="radio" name="gender" value="female">Female <br> <br>
+      <input type="radio" name="gender" value="horse">Horse <br> <br>
+    Email: <input type="email" name="email"><br> <br>
+    Favorite horse: <br>
+      <input type="checkbox" name="horse" value="shagyaarabian">Shagya arabian <br>     
+      <input type="checkbox" name="horse" value="appaloosa">Appaloosa <br>      
+      <input type="checkbox" name="horse" value="friesian">Friesian <br>      
+      <input type="checkbox" name="horse" value="plush">Plush horse <br> <br>     
+    Favorite pony: <br>
+      <select name="pony">
+        <option value="twilightsparkle">Twilight Sparkle</option>
+        <option value="applejack">Applejack</option>
+        <option value="pinkiepie">Pinkie Pie</option>
+        <option value="rainbowdash">Rainbow Dash</option>
+      </select> <br><br>
+    <input type="submit">
+    <input type="reset">        
+  </form> <br> <br> <br>
+  <form name="login" method="GET">
+    Register: <br> <br>
+    Nickname: <input type="text" name="nickname"> <br> <br>
+    Password: <input type="password" name="password" minlength="5"> <br> <br>
+    <input type="submit">
+    <input type="reset">
+  </form>
+	<footer><h3></h3>Contact me via Discord</footer>
 </body>
 </html>
-
-<htm></htm>
