--- a/Lesson1_5/fun/index.html
+++ b/Lesson1_5/fun/index.html
@@ -1,40 +1,3 @@
-	<!-- <form method="GET"> 
-		First Name: <input type="text" name="firstname"><br>
-		Last Name: <input type="text" name="lastname"><br>
-		Email: <input type="email" name="email" reguired> <br>
-		Password: <input type="password" name="password" min="5"><br>
-		Birthday: <input type="date" name="birthdate"><br>
-		Gender:<br> 
-		<input type="radio" name="gender" value="male">Male<br>
-		<input type="radio" name="gender" value="female">Female<br>
-		<input type="radio" name="gender" value="other">Other<br>
-		Pets :<br>
-		<input type="checkbox" name="pet" value="cat">Cat<br>
-		<input type="checkbox" name="pet" value="dog">Dog<br>
-		Cars: <br>
-		<select name="cars">
-			<option value="volvo">Volvo</option>
-			<option value="audi">Audi</option>
-		</select><br>
-		<input type="submit" value="Register!"> 
-		<input type="reset">
-	</form> -->
-
-
-
-<!-- ul
-ol
-li
-img
-strong
-em
-lorem
-form
-method (get, post)
-text, email, password, date, radio, checkbox
-select + option
-submit and reset -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -78,8 +41,6 @@ submit and reset -->
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
-	<footer><h3></h3>Contact me via Discord :)</footer>
+	<footer><h3></h3>Contact me via Discord</footer>
 </body>
 </html>
-
-<ht
